# nrev-workflow-mcp

./: .gitignore  LICENSE  README.md  dashboard.dev.html  pyproject.toml
.claude-plugin/: marketplace.json
docs/: CC_BUG_REPRO_2026_05_25.md  MONITORING_ROADMAP.md  NATIVE_NODE_SETTINGS_COOKBOOK.md  PROD_COMPREHENSIVE_TEST_2026_05_25.md  ROADMAP_2026_05_25.md  TOOL_SPECS.md  nrev_tables_api_investigation.md  v0_2_21_api_investigation.md
plugins/nrev-wf/: .mcp.json  README.md
plugins/nrev-wf/.claude-plugin/: plugin.json
plugins/nrev-wf/mcp/: pyproject.toml
plugins/nrev-wf/mcp/nrev_wf_mcp/: __init__.py  auth.py  client.py  server.py  tables_client.py
scripts/: install.sh  setup.sh  sync-plugin.sh
src/nrev_wf_mcp/: __init__.py  block_types.py  client.py  sandbox_lint.py  server.py
tests/: conftest.py  test_attach_node_input_arity.py  test_auth.py  test_bulk_test_mode.py  test_columns_metadata.py  test_credit_balance.py  test_field_options_helpers.py  test_graph.py  test_paste_wire_helper.py  test_projection.py  test_sandbox_lint.py  test_settings_helpers.py  test_smoke.py  test_sticky_notes.py  test_tables_mcp.py  test_trigger_autodetect.py  test_v0_2_13_fixes.py  test_v0_2_14_root_defaults.py  test_v0_2_15_features.py  test_v0_2_16_conversions.py  test_v0_2_17_fixes.py  test_v0_2_18_cross_user_connections.py  test_v0_2_19_dynamic_fields.py  test_v0_2_20_fixes.py  test_v0_2_21_fixes.py  test_v0_2_22_fixes.py  test_v0_2_23_fixes.py  test_v0_2_24_fixes.py  test_v0_2_25_fixes.py  test_v0_2_27_fixes.py  test_v0_2_28_fixes.py  test_v0_2_30_fixes.py
