[project]
name = "nrev-wf-mcp"
version = "0.1.0"
description = "MCP server for building nRev workflows via JWT-authenticated API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NurtureV", email = "common.dev@nurturev.com" }]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
nrev-wf-mcp = "nrev_wf_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nrev_wf_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
