[project]
name = "nrev-wf-mcp"
version = "0.2.6"
description = "Bundled nrev-wf-mcp inside the nrev-wf Cowork plugin"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
nrev-wf-mcp = "nrev_wf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nrev_wf_mcp"]
